# Vision_retail

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_2_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_REPORT.md  SETUP_LOCAL.md  docker-compose.yml  ingest_events.py  ingest_events_v2.py  pyproject.toml  requirements.api.txt  requirements.dashboard.txt  requirements.detection.txt  requirements.txt  verify_phase2.py
data/: store_metadata.json
data/brigade_road/: metadata.json  pos.csv
data/store_1/: metadata.json
data/store_2/: metadata.json
db/: initial_data.sql  schema.sql
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.detection  prometheus.yml
docs/: CHOICES.md  DESIGN.md  SCORE_MAXIMIZATION_REPORT.md  SUBMISSION_READINESS.md
scripts/: build_events.py  generate_datasets.py  run_api.sh  run_dashboard.sh  run_detection.sh  run_tests.sh  setup.sh  smoke_test.sh  start.sh  validate_metadata.py
scripts/training/: train_reid.py
src/: __init__.py
src/analytics/: __init__.py  cross_camera_reid.py  engine.py  pos_attribution.py
src/api/: __init__.py  database.py  main.py  models.py  service.py
src/dashboard/: __init__.py  main.py
src/datasets/: __init__.py
src/detection/: __init__.py  (+1 more)
tests/: __init__.py  test_analytics.py  test_api.py  test_cross_camera_reid.py  test_dashboard.py  test_datasets.py  test_events.py  test_identity_graph.py  test_pipeline.py  test_pipeline_units.py  test_pos_attribution.py  test_reid.py  test_service_extra.py  test_stores.py
(+10 files in other folders)
